--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,15 +7,174 @@
   <!--<link href="http://feeds.feedburner.com/tom-preston-werner" rel="alternate" title="Tom Preston-Werner" type="application/atom+xml" />
   <meta name="readability-verification" content="QCzSs992GxmRYRKVpPeZ6LE2tS8aYKxsSSQKV8YM"/>-->
 
+  <link rel="stylesheet" href="/css/bootstrap_simplex.min.css" type="text/css">
+  <link rel="stylesheet" href="/css/bootstrap-responsive.css" type="text/css">
+
   <!-- syntax highlighting CSS -->
   <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
 
   <!-- Homepage CSS -->
-  <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
+  <!--<link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />-->
+  <link rel="stylesheet" href="/css/docs.css" type="text/css" media="screen, projection" />
 
-  <!-- Typekit -->
-  <!--<script type="text/javascript" src="http://use.typekit.com/jpd0pfm.js"></script>
-  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>-->
+    
+  <style type="text/css">
+    .iosSlider {
+      width: 100%;
+      height: 200px;
+      margin-bottom: 20px;
+      -moz-box-shadow: inset 0 0 10px #000000;
+      -webkit-box-shadow: inset 0 0 10px black;
+      box-shadow: inset 0 0 10px black;
+      padding: 5px;
+    }
+    
+    .iosSlider .slider {
+      width: 100%;
+      height: 100%;
+    }
+    
+    .iosSlider .slider .item {
+      position: relative;
+      top: 0;
+      left: 0;
+      width: 280px;
+      height: 192px;
+      background: #fff;
+
+      border: 1px solid black;
+      -webkit-box-shadow: 0 8px 6px -6px black;
+      -moz-box-shadow: 0 8px 6px -6px black;
+      box-shadow: 0 8px 6px -6px black;
+    }
+    
+    .iosSlider .slider #item1 {
+      background: url(/img/h-slider-1.jpg) no-repeat 50% 0;
+    }
+    
+    .iosSlider .slider #item2 {
+      background: url(/img/h-slider-2.jpg) no-repeat 50% 0;
+    }
+    
+    .iosSlider .slider .item .text1 {
+      position: absolute;
+      top: 10px;
+      right: 150px;
+      opacity: 0;
+      filter: alpha(opacity:0);
+      background: #000;
+    }
+    
+    .iosSlider .slider .item .text1 span {
+      color: #fff;
+      font: bold 30px/40px "Helvetica Neue",Helvetica,Arial,sans-serif;
+    }
+    
+    .iosSlider .slider .item .text2 {
+      position: absolute;
+      top: 150px;
+      right: 0;
+      opacity: 0;
+      filter: alpha(opacity:0);
+      background: #000;
+      padding: 5px 7px 7px 7px;
+    }
+    
+    .iosSlider .slider .item .text2 span {
+      color: #fff;
+      font: normal 16px/20px "Helvetica Neue",Helvetica,Arial,sans-serif; 
+    }
+  </style>
+  
+  <!-- jQuery library -->
+  <script type="text/javascript" src = "/js/jquery-1.6.1.min.js"></script>
+  <script type="text/javascript" src = "/js/jquery.easing-1.3.js"></script>
+  
+  <!-- iosSlider plugin -->
+  <script src = "/js/jquery.iosslider.js"></script>
+
+  <script type="text/javascript">
+      $(document).ready(function() {
+        var loaded = false;
+
+        //$("#container").css("width", "563px");
+
+        $('.iosSlider').iosSlider({
+          desktopClickDrag: true,
+          scrollbarLocation: 'top',
+          scrollbarBorderRadius: '0',
+          responsiveSlideWidth: true,
+          onSliderLoaded: loadText
+        });
+
+        function loadText() {
+          $('.iosSlider').find('.text1, .text2').attr('style', '');
+          
+          $('.iosSlider').find('.text1').animate({
+            right: '100px',
+            opacity: '1'
+          }, 400, 'easeOutQuint');
+          
+          $('.iosSlider').find('.text2').delay(200).animate({
+            right: '50px',
+            opacity: '1'
+          }, 400, 'easeOutQuint');
+        }
+        
+        if(!loaded) {
+          loadText();
+        }
+      });
+    </script>
+</head>
+<body>
+<header class="jumbotron subhead" id="overview">
+<div class="container">
+  <div class="span5">
+    <h1>William Lindner</h1>
+    <p class="lead">It's with 2 n's</p>
+  </div>
+  <div id="container" class="span6">
+  <div class = 'iosSlider'>
+    <div class = 'slider'>
+      <div class = 'item' id = 'item1'>
+        <div class = 'text1'><span>Apartments<br />Near<br />Metro.com</span></div>
+        <div class = 'text2'><span>Find an apartment near<br />what's happening in DC.</span></div>
+      </div>
+      <div class = 'item' id = 'item2'>
+        <div class = 'text1'><span>Instanear</span></div>
+        <div class = 'text2'><span>See what's going on<br />around you, right now.</span></div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="subnav">
+  <ul class="nav nav-pills">
+    <li><a class="extra" href="/">HOME</a></li>
+    <li><a class="extra" href="/about.html">ABOUT</a></li>
+  </ul>
+</div>
+</header>
+<div class="container">
+  
+  {{ content }}
+  
+  <hr>
+  <footer>
+    <div class="contact">
+      <p>
+        William Lindner<br />
+        Cofounder of <a href="http://trycourier.com/">Courier</a><br />
+        wlindner522@gmail.com
+      </p>
+    </div>
+    <div class="contact pull-right">
+      <p>
+        <a href="http://github.com/wlindner/">github.com/wlindner</a><br />
+        <a href="http://twitter.com/wlindner/">twitter.com/wlindner</a><br />
+      </p>
+    </div>
+  </footer>
 
   <!-- Google Analytics -->
   <script type="text/javascript">
@@ -30,33 +189,6 @@
     })();
   </script>
   <!-- Google Analytics end -->
-</head>
-<body>
-
-<div class="site">
-  <div class="title">
-    <a href="/">William Lindner</a>
-    <a class="extra" href="/">home</a>
-    <a class="extra" href="/about.html">about</a>
-  </div>
-  
-  {{ content }}
-  
-  <div class="footer">
-    <div class="contact">
-      <p>
-        William Lindner<br />
-        Cofounder of <a href="http://trycourier.com/">Courier</a><br />
-        wlindner522@gmail.com
-      </p>
-    </div>
-    <div class="contact">
-      <p>
-        <a href="http://github.com/wlindner/">github.com/wlindner</a><br />
-        <a href="http://twitter.com/wlindner/">twitter.com/wlindner</a><br />
-      </p>
-    </div>
-  </div>
 </div>
 </body>
 </html>
