--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
   <meta name="readability-verification" content="QCzSs992GxmRYRKVpPeZ6LE2tS8aYKxsSSQKV8YM"/>-->
 
   <link rel="stylesheet" href="/css/bootstrap_simplex.min.css" type="text/css">
-  <link rel="stylesheet" href="/css/bootstrap-responsive.css" type="text/css">
+  <!--<link rel="stylesheet" href="/css/bootstrap-responsive.css" type="text/css">-->
 
   <!-- syntax highlighting CSS -->
   <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
@@ -16,10 +16,16 @@
   <!-- Homepage CSS -->
   <!--<link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />-->
   <link rel="stylesheet" href="/css/docs.css" type="text/css" media="screen, projection" />
+  
+  <!-- jQuery library -->
+  <script type="text/javascript" src = "/js/jquery-1.6.1.min.js"></script>
+  <script type="text/javascript" src = "/js/jquery.easing-1.3.js"></script>
+  
+  <!-- iosSlider plugin -->
+  <script src = "/js/jquery.iosslider.js"></script>
 
-    
-  <style type="text/css">
-    .iosSlider {
+  <style>
+  .iosSlider {
       width: 100%;
       height: 200px;
       margin-bottom: 20px;
@@ -49,7 +55,7 @@
     }
     
     .iosSlider .slider #item1 {
-      background: url(/img/h-slider-1.jpg) no-repeat 50% 0;
+      background: url(/img/anm_logo_no_border.png) no-repeat 50% 0;
     }
     
     .iosSlider .slider #item2 {
@@ -61,7 +67,7 @@
       top: 10px;
       right: 150px;
       opacity: 0;
-      filter: alpha(opacity:0);
+      filter: alpha(opacity: 0);
       background: #000;
     }
     
@@ -75,7 +81,7 @@
       top: 150px;
       right: 0;
       opacity: 0;
-      filter: alpha(opacity:0);
+      filter: alpha(opacity: 0);
       background: #000;
       padding: 5px 7px 7px 7px;
     }
@@ -85,13 +91,6 @@
       font: normal 16px/20px "Helvetica Neue",Helvetica,Arial,sans-serif; 
     }
   </style>
-  
-  <!-- jQuery library -->
-  <script type="text/javascript" src = "/js/jquery-1.6.1.min.js"></script>
-  <script type="text/javascript" src = "/js/jquery.easing-1.3.js"></script>
-  
-  <!-- iosSlider plugin -->
-  <script src = "/js/jquery.iosslider.js"></script>
 
   <script type="text/javascript">
       $(document).ready(function() {
@@ -99,11 +98,20 @@
 
         //$("#container").css("width", "563px");
 
+        /*$(window).resize(function () {
+          if($(window).width() <= 768) {
+            console.log('less than 768');
+          }
+        });*/
+
         $('.iosSlider').iosSlider({
           desktopClickDrag: true,
+          snapToChildren: true,
           scrollbarLocation: 'top',
           scrollbarBorderRadius: '0',
-          responsiveSlideWidth: true,
+          autoSlide: true,
+          autoSlideTimer: 20000,
+          infiniteSlider: true,
           onSliderLoaded: loadText
         });
 
@@ -130,16 +138,18 @@
 <body>
 <header class="jumbotron subhead" id="overview">
 <div class="container">
-  <div class="span5">
-    <h1>William Lindner</h1>
-    <p class="lead">It's with 2 n's</p>
+  <div class="bio">
+    <h1><a href="/">William Lindner</a></h1>
+    <p class="lead">Full stack software developer.<br />Python | JS+HTML+CSS | Java | PHP.<br />My last name has 2 n's.</p>
   </div>
-  <div id="container" class="span6">
+  <div class="projectSlider">
   <div class = 'iosSlider'>
     <div class = 'slider'>
       <div class = 'item' id = 'item1'>
-        <div class = 'text1'><span>Apartments<br />Near<br />Metro.com</span></div>
-        <div class = 'text2'><span>Find an apartment near<br />what's happening in DC.</span></div>
+        <a href="/projects/ApartmentsNearMetro.html">
+          <div class = 'text1'><span>Apartments<br />Near<br />Metro.com</span></div>
+          <div class = 'text2'><span>Find an apartment near<br />what's happening in DC.</span></div>
+        </a>
       </div>
       <div class = 'item' id = 'item2'>
         <div class = 'text1'><span>Instanear</span></div>
@@ -148,14 +158,9 @@
     </div>
   </div>
 </div>
-<div class="subnav">
-  <ul class="nav nav-pills">
-    <li><a class="extra" href="/">HOME</a></li>
-    <li><a class="extra" href="/about.html">ABOUT</a></li>
-  </ul>
-</div>
 </header>
-<div class="container">
+<div class="container" style="margin-bottom:40px">
+  <hr>
   
   {{ content }}
   
@@ -170,6 +175,7 @@
     </div>
     <div class="contact pull-right">
       <p>
+        <a href="http://www.linkedin.com/in/wlindner">linkedin.com/in/wlindner</a><br />
         <a href="http://github.com/wlindner/">github.com/wlindner</a><br />
         <a href="http://twitter.com/wlindner/">twitter.com/wlindner</a><br />
       </p>
@@ -190,5 +196,30 @@
   </script>
   <!-- Google Analytics end -->
 </div>
+
+<!-- Put this just before the closing body tag -->
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+<!-- Add this just before the closing body tag of your web page --> 
+<script type="text/javascript">
+  (function() {
+    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+    po.src = 'https://apis.google.com/js/plusone.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+  })();
+</script>
+
+<script type="text/javascript">
+    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+    var disqus_shortname = 'williamlindner'; // required: replace example with your forum shortname
+
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+</script>
+
 </body>
 </html>
