--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,30 @@
 ---
 layout: default
+comments: true
 ---
+<time datetime="{{ page.date | xmlschema }}">{{ page.date | date: "%d %b, %Y" }}</time> &raquo; <a href="{{ page.url }}">{{ page.title }}</a>
+<br />
+<br />
 <div id="post">
 {{ content }}
 </div>
 
-<div id="related">
-  <h2>Related Posts</h2>
-  <ul class="posts">
-    {% for post in site.related_posts limit:3 %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
+<a href="https://twitter.com/share" class="twitter-share-button" data-via="wlindner">Tweet</a>
+
+<!-- Google + -->
+<p><g:plusone size="medium"></g:plusone></p>
+
+<script type="text/javascript" src="http://www.reddit.com/buttonlite.js?i=2&styled=off&url=http://williamlindner.com{{ page.url }}&newwindow=1"></script>
+
+{{ if page.comments }}
+
+<div id="comments">
+	<h1>Comments</h1>
+	<br />
+
+	<div id="disqus_thread"></div>
+	<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+	<a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
 </div>
+
+{{ endif }}
