--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=980" />
+  <meta name="viewport" content="width=device-width" />
+  <meta name="viewport" content="user-scalable=no, width=device-width" />
+  <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
   <title>{{ page.title }}</title>
   <meta name="author" content="William Lindner" />
   <!--<link href="http://feeds.feedburner.com/tom-preston-werner" rel="alternate" title="Tom Preston-Werner" type="application/atom+xml" />
@@ -170,7 +174,6 @@
       <p>
         William Lindner<br />
         Cofounder of <a href="http://trycourier.com/">Courier</a><br />
-        wlindner522@gmail.com
       </p>
     </div>
     <div class="contact pull-right">
