--- a/css/docs.css
+++ b/css/docs.css
@@ -44,6 +44,12 @@ body {
   margin-right: auto;
 }
 
+.posts {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  list-style-type: none;
+}
+
 
 /* Jumbotrons
 -------------------------------------------------- */
@@ -89,7 +95,7 @@ footer a {
 
 /* Responsive Docs
 -------------------------------------------------- */
-@media (max-width: 480px) {
+@media screen and (max-device-width: 480px) and (max-width: 480px) {
 
   body {
     width: 350px;
@@ -161,177 +167,10 @@ footer a {
 }
 
 @media (min-width: 480px) and (max-width: 700px) {
-  /*body {
-    width: 640px;
-    margin-left: 5px;
-    margin-right: 5px;
-    padding-top: 5px;
-  }
-
-  .container {
-    width: 640px;
-  }*/
 
   .projectSlider {
     margin-left: auto;
     margin-right: auto;
     float: none;
   }
-}
-
-
-/*@media (max-width: 768px) {
-
-  body {
-    padding-top: 0;
-  }
-
-  .jumbotron .btn {
-    margin-bottom: 10px;
-  }
-
-  .subnav {
-    display: block;
-    position: static;
-    top: auto;
-    z-index: auto;
-    width: auto;
-    height: auto;
-    background: #fff; 
-    -webkit-box-shadow: none;
-       -moz-box-shadow: none;
-            box-shadow: none;
-  }
-  .subnav .nav > li {
-    float: none;
-  }
-  .subnav .nav > li > a {
-    border: 0;
-  }
-  .subnav .nav > li + li > a {
-    border-top: 1px solid #e5e5e5;
-  }
-  .subnav .nav > li:first-child > a,
-  .subnav .nav > li:first-child > a:hover {
-      -webkit-border-radius: 4px 4px 0 0;
-         -moz-border-radius: 4px 4px 0 0;
-              border-radius: 4px 4px 0 0;
-  }
-
-  .large-bird {
-    display: none;
-  }
-  .popover-well .popover-wrapper {
-    margin-left: 0;
-  }
-
-  .show-grid [class*="span"] {
-    margin-bottom: 5px;
-  }
-
-  .bio {
-    margin-left: auto;
-    margin-right: auto;
-    float: none;
-  }
-
-  .projectSlider {
-    margin-left: auto;
-    margin-right: auto;
-    float: none;
-  }
-
-  footer .pull-right {
-    float: none;
-  }
-  footer p {
-    margin-bottom: 9px;
-  }
-
-}*/
-
-
-/*@media (min-width: 480px) and (max-width: 768px) {
-
-  .jumbotron h1 {
-    font-size: 45px;
-    text-align: center;
-    margin-right: 0;
-    margin-left: 0;
-  }
-  .jumbotron p {
-    text-align: center;
-    margin-right: 0;
-    margin-left: 0;
-  }
-
-  #container {
-    width: 350px;
-  }
-
-}*/
-
-
-/*@media (min-width: 768px) and (max-width: 980px) {
-
-  body {
-    padding-top: 0;
-    max-width: 940px;
-    margin: 0 auto;
-  }
-
-  .jumbotron h1 {
-    font-size: 72px;
-  }
-
-  #container {
-    width: 563px;
-  }
-
-}*/
-
-
-/*@media (max-width: 980px) {
-  body {
-    max-width: 940px;
-    margin: 0 auto;
-  }
-
-  .navbar-fixed-top .brand {
-    float: left;
-    margin-left: 0;
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .quick-links li {
-    display: inline-block;
-    margin: 5px;
-  }
-
-}*/
-
-
-/* LARGE DESKTOP SCREENS */
-/*@media (min-width: 1200px) {
-
-  body {
-    max-width: 940px;
-    margin: 0 auto;
-  }
-
-  .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container {
-    width: 940px;
-  }
-
-  .span5 {
-    width: 400px;
-  }
-
-}*/
-
-.posts {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  list-style-type: none;
 }
