--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,7 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=980" />
   <meta name="viewport" content="width=device-width" />
-  <meta name="viewport" content="user-scalable=no, width=device-width" />
-  <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
+  <meta name="viewport" content="user-scalable=yes, width=device-width" />
   <title>{{ page.title }}</title>
   <meta name="author" content="William Lindner" />
   <!--<link href="http://feeds.feedburner.com/tom-preston-werner" rel="alternate" title="Tom Preston-Werner" type="application/atom+xml" />
