Changed job title so people know I work for Zoomdata

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -172,14 +172,14 @@
     <div class="contact">
       <p>
         William Lindner<br />
-        Cofounder of <a href="http://trycourier.com/">Courier</a><br />
+        R&D at <a href="http://zoomdata.com/" target="_blank">Zoomdata</a><br />
       </p>
     </div>
     <div class="contact pull-right">
       <p>
-        <a href="http://www.linkedin.com/in/wlindner">linkedin.com/in/wlindner</a><br />
-        <a href="http://github.com/wlindner/">github.com/wlindner</a><br />
-        <a href="http://twitter.com/wlindner/">twitter.com/wlindner</a><br />
+        <a href="http://www.linkedin.com/in/wlindner" target="_blank">linkedin.com/in/wlindner</a><br />
+        <a href="http://github.com/wlindner/" target="_blank">github.com/wlindner</a><br />
+        <a href="http://twitter.com/wlindner/" target="_blank">twitter.com/wlindner</a><br />
       </p>
     </div>
   </footer>
