--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,11 +58,11 @@
     }
     
     .iosSlider .slider #item1 {
-      background: url(/img/anm_logo_no_border.png) no-repeat 50% 0;
+      background: url(/img/spotsy-icon-black.png) no-repeat 50% 0;
     }
     
     .iosSlider .slider #item2 {
-      background: url(/img/h-slider-2.jpg) no-repeat 50% 0;
+      background: url(/img/anm_logo_no_border.png) no-repeat 50% 0;
     }
     
     .iosSlider .slider .item .text1 {
@@ -149,14 +149,16 @@
   <div class = 'iosSlider'>
     <div class = 'slider'>
       <div class = 'item' id = 'item1'>
+        <a href="http://spotsyapp.com">
+          <div class = 'text1'><span>Spotsy</span></div>
+          <div class = 'text2'><span>Discover the world<br />through Instagram.</span></div>
+        </a>
+      </div>
+      <div class = 'item' id = 'item2'>
         <a href="/projects/ApartmentsNearMetro.html">
           <div class = 'text1'><span>Apartments<br />Near<br />Metro.com</span></div>
           <div class = 'text2'><span>Find an apartment near<br />what's happening in DC.</span></div>
         </a>
-      </div>
-      <div class = 'item' id = 'item2'>
-        <div class = 'text1'><span>Instanear</span></div>
-        <div class = 'text2'><span>See what's going on<br />around you, right now.</span></div>
       </div>
     </div>
   </div>
@@ -172,7 +174,8 @@
     <div class="contact">
       <p>
         William Lindner<br />
-        R&D at <a href="http://zoomdata.com/" target="_blank">Zoomdata</a><br />
+        Frontend Engineering Manager at <a href="http://zoomdata.com/" target="_blank">Zoomdata</a><br />
+        Creator of <a href="http://spotsyapp.com/" target="_blank">Spotsy</a><br />
       </p>
     </div>
     <div class="contact pull-right">
