Fixed up the header a bit.

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -19,28 +19,29 @@
 
     </head>
     <body>
+        <div class="header">
+          <div class="links">
+            <a class="extra" href="/about.html">About</a>
+            <a class="extra" href="/"><img src="/img/wl3_logo.png" /></a>
+            <a class="extra" href="/projects.html">Projects</a>
+          </div>
+        </div>
 
         <div class="site">
-          <div class="header">
-            <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-            <a class="extra" href="/">home</a>
-            <a class="extra" href="/about.html">about</a>
-            <a class="extra" href="/projects.html">projects</a>
-          </div>
 
           {{ content }}
 
           <div class="footer">
             <div class="contact left">
               <p>
-                <a href="mailto:wlindner522@gmail.com">© 2014 William Lindner</a>
+                <a target="_blank" href="mailto:wlindner522@gmail.com">© 2014 William Lindner</a>
               </p>
             </div>
             <div class="contact right">
               <p>
-                <a href="https://twitter.com/wlindner">Twitter</a> | 
-                <a href="https://github.com/wlindner">Github</a> | 
-                <a href="https://linkedin.com/in/wlindner">Linkedin</a>
+                <a target="_blank" href="https://twitter.com/wlindner">Twitter</a> | 
+                <a target="_blank" href="https://github.com/wlindner">Github</a> | 
+                <a target="_blank" href="https://linkedin.com/in/wlindner">Linkedin</a>
               </p>
             </div>
           </div>
