--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width">
 
         <!-- custom fonts -->
-        <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,700' rel='stylesheet' type='text/css'>
 
         <!-- build:css({app,.tmp}) /css/main.css -->
         <!-- Syntax highlighting CSS -->
@@ -47,6 +47,12 @@
             </div>
           </div>
         </div>
+
+    <!-- build:js(app) /js/vendor.js -->
+    <!-- bower:js -->
+    <script src="../_bower_components/masonry/dist/masonry.pkgd.js"></script>
+    <!-- endbower -->
+    <!-- endbuild -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
