--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -33,6 +33,14 @@ $snuggles: #829fd9;
 
 html, body { height: 100%; }
 
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 body {
   background-color: #FFF;
   font: 12px 'Ubuntu', sans-serif;
@@ -86,7 +94,7 @@ a:visited { color: #a0a; }
 .site {
   font-size: 115%;
   text-align: justify;
-  width: 42em;
+  width: 830px;
   margin: 3em auto 2em;
   line-height: 1.5em;
 }
@@ -203,4 +211,58 @@ a:visited { color: #a0a; }
 
 .post pre.terminal code {
   background-color: #333;
+}
+
+/*****************************************************************************/
+/*
+/* Projects
+/*
+/*****************************************************************************/
+
+#projects {
+  margin: 0 40px;
+}
+
+.project { 
+  background-color: #f3f5f8;
+  color: #7f8389;
+  width: 235px;
+  margin-bottom: 20px;
+
+  a {
+    color: inherit;
+    text-decoration:none;
+  }
+
+  img, .thumbnail {
+    width: 235px;
+    height: 176px;
+    background-color: #e1e4e9;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+
+  h2 {
+    font-weight: 700;
+    font-size: 24px;
+    padding: 27px 30px 0 30px;
+    letter-spacing: -0.025em;
+  }
+
+  h4 {
+    padding: 0 30px;
+    font-size: 14px;
+    font-weight: 300;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+  }
+
+  p {
+    margin: 0;
+    padding: 20px 30px 40px 30px;
+    font-size: 14px;
+    font-weight: 300;
+    text-align: left;
+    letter-spacing: -0.025em;
+  }
 }
