Fixed a link to Masonry in builds.

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -50,7 +50,7 @@
 
     <!-- build:js(app) /js/vendor.js -->
     <!-- bower:js -->
-    <script src="../_bower_components/masonry/dist/masonry.pkgd.js"></script>
+    <script src="/_bower_components/masonry/dist/masonry.pkgd.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
