Added pjax-standalone and minor CSS tweaks to make it work.

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -28,7 +28,7 @@
           </div>
         </div>
 
-        <div class="site">
+        <div id="site" class="site">
 
           {{ content }}
 
@@ -51,6 +51,7 @@
     <!-- build:js(app) /js/vendor.js -->
     <!-- bower:js -->
     <script src="/_bower_components/masonry/dist/masonry.pkgd.js"></script>
+    <script src="/_bower_components/pjax-standalone/pjax-standalone.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
