--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -20,8 +20,6 @@ $snuggles: #829fd9;
 @mixin vertical-align {
   position: relative;
   top: 50%;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
   transform: translateY(-50%);
 }
 
@@ -31,14 +29,15 @@ $snuggles: #829fd9;
   padding: 0;
 }
 
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 html, body { height: 100%; }
 
 html {
   box-sizing: border-box;
-}
-
-*, *:before, *:after {
-  box-sizing: inherit;
+  overflow-y: scroll;
 }
 
 body {
