Added Velocity. Got transition animations working after bug fixing pjax-standalone library.

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -52,6 +52,7 @@
     <!-- bower:js -->
     <script src="/_bower_components/masonry/dist/masonry.pkgd.js"></script>
     <script src="/_bower_components/pjax-standalone/pjax-standalone.js"></script>
+    <script src="/_bower_components/velocity/velocity.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
