--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -57,12 +57,27 @@ a         { color: #00a; display: inline-block; }
 a:hover   { color: #000; }
 a:visited { color: #a0a; }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 .left {
   float: left;
 }
 
 .right {
   float: right;
+}
+
+@media all and (max-width: 500px) {
+  .left {
+    float: none;
+  }
+
+  .right {
+    float: none;
+  }
 }
 
 /*****************************************************************************/
@@ -73,15 +88,15 @@ a:visited { color: #a0a; }
 .posts {
   list-style-type: none;
   margin-bottom: 2em;
-}
+  
+  li {
+    line-height: 1.75em;
+  }
 
-.posts li {
-  line-height: 1.75em;
-}
-
-.posts span {
-  color: #aaa;
-  font-size: 80%;
+  span {
+    color: #aaa;
+    font-size: 80%;
+  }
 }
 
 /*****************************************************************************/
@@ -91,11 +106,20 @@ a:visited { color: #a0a; }
 /*****************************************************************************/
 
 .site {
-  font-size: 115%;
-  text-align: justify;
-  width: 830px;
-  margin: 3em auto 2em;
+  width: 100%;
   line-height: 1.5em;
+  text-align: left;
+  padding: 2em;
+  font-size: 90%;
+}
+
+@media all and (min-width: 830px) {
+  .site {
+    width: 830px;
+    margin: 3em auto 2em;
+    text-align: justify;
+    font-size: 115%;
+  }
 }
 
 .header {
@@ -164,6 +188,12 @@ a:visited { color: #a0a; }
   }
 }
 
+@media all and (max-width: 500px) {
+  .footer .contact {
+    text-align: center;
+  }
+}
+
 .footer .rss {
   margin-top: 1.1em;
   margin-right: -.2em;
@@ -219,7 +249,7 @@ a:visited { color: #a0a; }
 /*****************************************************************************/
 
 #projects {
-  margin: 0 40px;
+  margin: 0 auto;
 }
 
 .project { 
