--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -284,7 +284,7 @@ img {
   h2 {
     font-weight: 700;
     font-size: 24px;
-    padding: 27px 30px 0 30px;
+    padding: 27px 30px 2px 30px;
     letter-spacing: -0.025em;
   }
 
