Footer is now sticky at the bottom of the page.

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -20,6 +20,7 @@
 
     </head>
     <body>
+      <div id="wrapper">
         <div class="header">
           <div class="links">
             <a class="extra" href="/about.html">About</a>
@@ -32,21 +33,23 @@
 
           {{ content }}
 
-          <div class="footer">
-            <div class="contact left">
-              <p>
-                <a target="_blank" href="mailto:wlindner522@gmail.com">© 2014 William Lindner</a>
-              </p>
-            </div>
-            <div class="contact right">
-              <p>
-                <a target="_blank" href="https://twitter.com/wlindner">Twitter</a> | 
-                <a target="_blank" href="https://github.com/wlindner">Github</a> | 
-                <a target="_blank" href="https://linkedin.com/in/wlindner">Linkedin</a>
-              </p>
-            </div>
-          </div>
         </div>
+
+        <footer>
+          <div class="contact left">
+            <p>
+              <a target="_blank" href="mailto:wlindner522@gmail.com">© 2014 William Lindner</a>
+            </p>
+          </div>
+          <div class="contact right">
+            <p>
+              <a target="_blank" href="https://twitter.com/wlindner">Twitter</a> | 
+              <a target="_blank" href="https://github.com/wlindner">Github</a> | 
+              <a target="_blank" href="https://linkedin.com/in/wlindner">Linkedin</a>
+            </p>
+          </div>
+        </footer>
+      </div>
 
     <!-- build:js(app) /js/vendor.js -->
     <!-- bower:js -->
