Vertically center header on iOS safari.

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -21,13 +21,13 @@
     </head>
     <body>
       <div id="wrapper">
-        <div class="header">
+        <header>
           <div class="links">
             <a class="extra" href="/about.html">About</a>
             <a class="extra" href="/"><img src="/img/wl3_logo.png" /></a>
             <a class="extra" href="/projects.html">Projects</a>
           </div>
-        </div>
+        </header>
 
         <div id="site" class="site">
 
