--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -61,7 +61,7 @@ a         { color: #00a; display: inline-block; }
 a:hover   { color: #000; }
 a:visited { color: #a0a; }
 
-img {
+img, video, canvas {
   max-width: 100%;
   height: auto;
 }
