--- a/app/_layouts/post.html
+++ b/app/_layouts/post.html
@@ -7,3 +7,15 @@ layout: default
 <div class="post">
 {{ content }}
 </div>
+
+{{ if page.comments }}
+
+<div id="comments">
+	<h1>Comments</h1>
+	<br />
+	<div id="disqus_thread"></div>
+
+	<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</div>
+
+{{ endif }}
