Added tags and links from projects page.

--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -342,4 +342,10 @@ footer .rss img {
     text-align: left;
     letter-spacing: -0.025em;
   }
+
+  .tag-posts {
+    position: absolute;
+    bottom: 10px;
+    left: 30px;
+  }
 }
