Added a post about Codepen Add & Remove.

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -51,6 +51,9 @@
         </footer>
       </div>
 
+    <!-- Dummy #disqus_thread to keep embed.js from Disqus from complaining -->
+    <div id="disqus_thread" style="display: none;"></div>
+
     <!-- build:js(app) /js/vendor.js -->
     <!-- bower:js -->
     <script src="/_bower_components/masonry/dist/masonry.pkgd.js"></script>
