Added jQuery. Added header built in codepen.

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -27,6 +27,7 @@
             <a class="extra" href="/"><img src="/img/wl3_logo.png" /></a>
             <a class="extra" href="/projects.html">Projects</a>
           </div>
+          <svg></svg>
         </header>
 
         <section class="social-share" tabindex="0">
@@ -83,6 +84,7 @@
 
     <!-- build:js(app) /js/vendor.js -->
     <!-- bower:js -->
+    <script src="/_bower_components/jquery/dist/jquery.js"></script>
     <script src="/_bower_components/masonry/dist/masonry.pkgd.js"></script>
     <script src="/_bower_components/pjax-standalone/pjax-standalone.js"></script>
     <script src="/_bower_components/velocity/velocity.js"></script>
@@ -112,6 +114,7 @@
 
     <!-- build:js(app) /js/scripts.js -->
     <script src="/js/main.js"></script>
+    <script src="/js/header.js"></script>
     <!-- endbuild -->
     </body>
 </html>
