Fade in share button, if not on mobile.

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -30,7 +30,7 @@
           <svg></svg>
         </header>
 
-        <section class="social-share" tabindex="0">
+        <section class="social-share" tabindex="0" style="display: none;">
             <div class="block share"></div>
             <div class="items">
                 <a class="block item twitter" href="https://twitter.com/share">
