--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -105,11 +105,13 @@
     <script type="text/javascript">
         var disqus_shortname = 'williamlindner';
 
-        (function() {
-            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-        })();
+        if (document.location.hostname !== "localhost") {
+            (function() {
+                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+            })();
+        }
     </script>
 
     <!-- build:js(app) /js/scripts.js -->
