Minor CSS tweak to fix footer on IE.

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -64,19 +64,22 @@
         </div>
 
         <footer>
-          <div class="contact left">
-            <p>
-              <a target="_blank" href="mailto:wlindner522@gmail.com">© 2014 William Lindner</a>
-            </p>
-          </div>
-          <div class="contact right">
-            <p>
-              <a target="_blank" href="https://twitter.com/wlindner">Twitter</a> | 
-              <a target="_blank" href="https://github.com/wlindner">Github</a> | 
-              <a target="_blank" href="https://linkedin.com/in/wlindner">Linkedin</a>
-            </p>
-          </div>
+            <div class="center">
+                <div class="contact left">
+                    <p>
+                        <a target="_blank" href="mailto:wlindner522@gmail.com">© 2014 William Lindner</a>
+                    </p>
+                </div>
+                <div class="contact right">
+                    <p>
+                        <a target="_blank" href="https://twitter.com/wlindner">Twitter</a> |
+                        <a target="_blank" href="https://github.com/wlindner">Github</a> |
+                        <a target="_blank" href="https://linkedin.com/in/wlindner">Linkedin</a>
+                    </p>
+                </div>
+            </div>
         </footer>
+
       </div>
 
     <!-- Dummy #disqus_thread to keep embed.js from Disqus from complaining -->
