Improved share block by removing interaction to open share options.

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -30,8 +30,8 @@
           <svg></svg>
         </header>
 
-        <section class="social-share" tabindex="0" style="display: none;">
-            <div class="block share"></div>
+        <section class="social-share"style="display: none;">
+            <!-- <div class="block share"></div> -->
             <div class="items">
                 <a class="block item twitter" href="https://twitter.com/share">
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
