--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -230,38 +230,45 @@ footer {
 /*
 /*****************************************************************************/
 
-/* standard */
-.post pre {
-  border: 1px solid #ddd;
-  background-color: #eef;
-  padding: 0 .4em;
-}
+.post {
+  img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
-.post ul, .post ol {
-  margin-left: 1.35em;
-}
+  /* standard */
+  pre {
+    border: 1px solid #ddd;
+    background-color: #eef;
+    padding: 0 .4em;
+  }
 
-.post code {
-  border: 1px solid #ddd;
-  background-color: #eef;
-  padding: 0 .2em;
-}
+  ul, ol {
+    margin-left: 1.35em;
+  }
 
-.post pre code {
-  border: none;
-}
+  code {
+    border: 1px solid #ddd;
+    background-color: #eef;
+    padding: 0 .2em;
+  }
 
-/* terminal */
-.post pre.terminal {
-  border: 1px solid #000;
-  background-color: #333;
-  color: #FFF;
-}
+  pre code {
+    border: none;
+  }
 
-.post pre.terminal code {
-  background-color: #333;
-}
+  /* terminal */
+  pre.terminal {
+    border: 1px solid #000;
+    background-color: #333;
+    color: #FFF;
+  }
 
+  pre.terminal code {
+    background-color: #333;
+  }
+}
 
 /*****************************************************************************/
 /*
