--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -86,6 +86,13 @@ img, video, canvas {
   position: relative;
 }
 
+.avatar {
+  float: right;
+  margin-left: 40px;
+  margin-bottom: 40px;
+  border-radius: 50%;
+}
+
 /*****************************************************************************/
 /*
 /* Home
