--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -52,7 +52,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 100%; }
 
 h1 { margin-bottom: 1em; }
-p { margin: 1em 0; }
+p { margin: 0 0 1.5em 0; }
 
 a         { color: #00a; display: inline-block; }
 a:hover   { color: #000; }
@@ -61,6 +61,15 @@ a:visited { color: #a0a; }
 img, video, canvas {
   max-width: 100%;
   height: auto;
+}
+
+blockquote {
+  background: #f9f9f9;
+  font-style: italic;
+  font-size: 1.2em;
+  border-left: 10px solid #ccc;
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
 }
 
 .left {
