--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -75,6 +75,11 @@ blockquote {
   border-left: 10px solid #ccc;
   margin: 1.5em 10px;
   padding: 0.5em 10px;
+
+  p {
+    margin: 0;
+    padding: 6px;
+  }
 }
 
 .left {
